<resources>
    <string name="app_name">hw5</string>
    <string name="action_settings">Settings</string>
    <string name="sendQuitMessage">Quit</string>
    <string name="sendReconnectMessage">Reconnect</string>
    <string name="sendStartMessage">Start</string>
    <string name="sendRestartMessage">Restart</string>
    <string name="sendGuess">Guess</string>
    <string name="autoFillGuessText">Enter guess as character or full word</string>
    <string name="scoreTextView">Score: </string>
    <string name="remainingGuessesTextView">Guesses left: </string>
    <string name="progressTextView">Word progress</string>
    <string name="wrongGuessesTextView">Guessed: </string>
    <string name="secretReveal">The word was: </string>
</resources>
